# remarkable2notion

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md
scripts/: README.md  extract_oauth_credentials.sh
src/: config.rs  error.rs  google_drive.rs  google_vision.rs  main.rs  notion.rs  oauth.rs  remarkable.rs  sync.rs  test.rs
src/cli/: mod.rs
src/notion/: mod.rs
