[package]
name = "remarkable2notion"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
base64 = "0.22"
image = "0.25"
oauth2 = "4.4"
url = "2.5"
tiny_http = "0.12"
dirs = "5.0"
open = "5.0"
